log
Fri 14 Oct 2022 03:36:49 PM UTC: 
 tests:  0|4
total_score: 0/70
7fb08f9
Fri 14 Oct 2022 03:48:59 PM UTC: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
e37ddc9
Fri 14 Oct 2022 03:52:03 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:25: error: incompatible types when returning type ‘heapElem’ {aka ‘struct nodo’} but ‘void *’ was expected
   21 |     return pq->heapArray[0];
      |            ~~~~~~~~~~~~~^~~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
   22 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
adcd8d5
Fri 14 Oct 2022 03:53:58 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:28: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   21 |     return pq->heapArray[0]->data;
      |                            ^~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
   22 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2d19f78
Fri 14 Oct 2022 03:55:37 PM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:28: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   22 |     return pq->heapArray[0]->data;
      |                            ^~
Compilation failed
b2804d6
Fri 14 Oct 2022 03:55:46 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
932ad3f
